Rectify bugs with reply to field not showing on FE

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -226,7 +226,7 @@ button span {
 }
 
 .replyFlag {
-    margin-bottom: 5px;
+    color: var(--greyText);
 }
 
 .replyFlag a {
